--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
 		<encoding>UTF-8</encoding>
 		<java.version>17</java.version>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<sonar.organization></sonar.organization>
-		<sonar.projectKey></sonar.projectKey>
+		<sonar.organization></aepsarip>
+		<sonar.projectKey></aepSarip_aep-sitodo>
 		<sonar-maven-plugin.version>3.9.1.2184</sonar-maven-plugin.version>
 		<!-- Serenity & Cucumber-related configuration properties -->
 		<serenity.version>4.0.27</serenity.version>
